2011-04-15  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md (popcountdi2, popcountsi2, popcounthi2):
	Replace match_operand with match_dup for the third operand in
	these expanders.

2011-04-15  Jakub Jelinek  <jakub@redhat.com>

	PR target/48605
	* config/i386/sse.md (avx_insertps, sse4_1_insertps): If operands[2]
	is a MEM, offset it as needed based on top 2 bits in operands[3],
	change MEM mode to SFmode and mask those 2 bits away from operands[3].

2011-04-13  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2011-04-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/48366
	* config/pa/pa.c (hppa_register_move_cost): Increase to 18 cost of
	move from floating point to shift amount register .
	(emit_move_sequence): Remove secondary reload support for floating
	point to shift amount amount register copies.
	(pa_secondary_reload): Return GENERAL_REGS for floating point/shift
	amount register copies.
	* config/pa/pa32-regs.h (HARD_REGNO_MODE_OK): For shift amount
	register, return false if mode isn't a scalar integer mode.
	* config/pa/pa64-regs.h (HARD_REGNO_MODE_OK): Likewise.

2011-04-13  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/48591
	* omp-low.c (expand_omp_atomic_fetch_op): Return false if decl is
	NULL.
	(expand_omp_atomic_pipeline): Return false if cmpxchg is NULL.

2011-04-13  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	Backport from mainline:
	2011-04-12  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>
	PR target/48090
	* config/arm/arm.md (*arm_negdi2): Fix early clobber constraints.

2011-04-12  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/48195
	* ipa-cp.c (ipcp_driver): Call ipa_check_create_node_params and
	ipa_check_create_edge_args.
	(ipcp_generate_summary): Do not call ipa_check_create_node_params and
	ipa_check_create_edge_args.
	* ipa-inline.c (inline_generate_summary): Do not call
	ipa_check_create_node_params and ipa_check_create_edge_args.